maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: not found: type sommeAngle
def keepHandOnSideWall(Int : sommeAngle) : Int = {
                             ^PledgeMaze:28: error: not found: type dir
def isDirectionFree(Direction : dir) : Boolean = {
                                ^PledgeMaze:19: error: not found: value sommeAngle
  sommeAngle+=1
  ^PledgeMaze:22: error: not found: value sommeAngle
    sommeAngle-=1
    ^PledgeMaze:25: error: not found: value sommeAngle
  return sommeAngle
         ^PledgeMaze:29: error: not found: value dir
  setDirection(dir)
               ^