maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle=0
  while(!estSurBiscuit()){
    setDirection(Direction.NORD)
    while(!estFaceMur()){
      avance()
    }
    do{
      sommeAngle=keepHandOnSideWall(sommeAngle)
    }
    while(sommeAngle!=0 || isDirectionFree(Direction.NORD)==false)
  }
  prendBiscuit()
}

def keepHandOnSideWall(Int : sommeAngle) : Int = {
  gauche()
  sommeAngle+=1
  while(estFaceMur()==true){
    droite()
    sommeAngle-=1
  }
  avance()
  return sommeAngle
}

def isDirectionFree(Direction : dir) : Boolean = {
  setDirection(dir)
  if(!estFaceMur()){
    return false
  }else{
    return true
  }
}